compiler/tests/en/errors/dead_if.salam
// EXPECT: E068
func main:
    if false:
        println "test"
    end
end
